Update : Mise à jour du readme et simplification code